<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General"/>
    <!--
        <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    -->
    <Preference android:title="Local Media Folders">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.rbk.testapp.SyncedFoldersList"
            android:targetPackage="com.rbk.testapp"/>
    </Preference>
    <!--
        </PreferenceScreen>
    -->
    <PreferenceCategory
        android:title="Target Folder Structure">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefCreatePerAlbumFolder"
            android:title="Per album folder?"
            />
        <!--
        NAS FOLDER STRUCTURE
        -->
        <ListPreference
            android:defaultValue="@string/prefTGTFolderStructDefault"
            android:entries="@array/prefTGTFolderStructNames"
            android:entryValues="@array/prefTGTFolderStructValues"
            android:key="prefTGTFolderStructure"
            android:title="NAS folder structure"
            />
        <ListPreference
            android:defaultValue="@string/prefsSubfolderNameFormatDefault"
            android:entries="@array/prefsSubfolderNameFormatNames"
            android:entryValues="@array/prefsSubfolderNameFormatValues"
            android:key="prefsSubfolderNameFormat"
            android:title="Date based subfolders"
            />
        <!--
        TARGET FILE FORMAT
        -->
        <ListPreference
            android:defaultValue="@string/prefTGTRenameOptionDefault"
            android:entries="@array/prefTGTRenameOptionNames"
            android:entryValues="@array/prefTGTRenameOptionValues"
            android:key="prefTGTRenameOption"
            android:title="Target file name"
            />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="Target File Name Conflicts">
        <ListPreference
            android:defaultValue="@string/prefTGTAlreadyExistsTestDefault"
            android:entries="@array/prefTGTAlreadyExistsTestNames"
            android:entryValues="@array/prefTGTAlreadyExistsTestValues"
            android:key="prefTGTAlreadyExistsTest"
            android:title="Files are considered identical when"
            />
        <ListPreference
            android:defaultValue="@string/prefTGTAlreadyExistsRenameDefault"
            android:entries="@array/prefTGTAlreadyExistsRenameNames"
            android:entryValues="@array/prefTGTAlreadyExistsRenameValues"
            android:key="prefTGTAlreadyExistsRename"
            android:title="Avoid duplicate names by renaming to"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Local Media Retention">
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="prefSRCShrinkAfter"
            android:title="Shrink copied files after XX days (0 means never)"
            />
        <SwitchPreference
            android:key="prefSRCRenameShrinked"
            android:title="Rename shrinked file to [file].small.[ext]"
            />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="prefSRCDeleteAfter"
            android:title="Delete copied files after XX days (0 means never)"
            />
    </PreferenceCategory>

</PreferenceScreen>
